# ug

clp-evsp-csp-main/: .gitignore  CMakeLists.txt  LICENSE  README.md  constants.h  csp.cpp  csp.h  helpers.cpp  helpers.h  logger.h  main.cpp  makefile  operators.cpp  operators.h  run  vehicle.cpp  vehicle.h
clp-evsp-csp-main/data/Ann_Arbor/: compatibility_matrix.txt  idle_time_matrix.txt  initial_vehicle_rotations.txt  terminal_data.txt  trip_data.txt
